feat: adding a disappearing element

--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,11 @@
 :root {
+  --font: 'Poppins', sans-serif;
+  --white-color: #ffffff;
+}
+
+html,
+body {
+  font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 0;
 }
