--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,5 @@
 :root {
   --font: 'Poppins', sans-serif;
   --white-color: #ffffff;
-}
-
-html,
-body {
-  font-family: 'Poppins', sans-serif;
-  margin: 0;
-  padding: 0;
+  --gray-color: #f7f7f7;
 }
